PyMaker/datas/object2/RawHTML/i3201/Python_DOC_referPages.python3-syntaxerror-with-asyncpg.txt
<div class="post-text" itemprop="text">
<p>I am trying to create a connection pool as shown on <a href="https://magicstack.github.io/asyncpg/current/api/index.html#connection-pools" rel="nofollow noreferrer">the documentation</a> to test the module.</p>
<p><strong>Here's my last attempt:</strong></p>
<pre><code>import asyncpg
cs = "user:password@my_postgresql_server_ipaddr:port/database?name=db_name"

async with asyncpg.create_pool(dsn=cs) as pool:
    print("pool created")
</code></pre>
<p><strong>I'm getting a SyntaxError on line 4, pointing at 'with':</strong></p>
<pre><code>async with asyncpg.create_pool(dsn=cs) as pool:
         ^
SyntaxError: invalid syntax
</code></pre>
<p>Running the code from the Python interpreter on the terminal produces the same results.</p>
<p>Python version is 3.6.5, running the script from the terminal with <code>python3 script.py</code></p>
</div>
<div class="post-text" itemprop="text">
<p>you should wrap your code inside an <code>async</code> function and call it inside loop , for example:</p>
<pre><code>import asyncio
import asyncpg

async def test():
    cs = "user:password@my_postgresql_server_ipaddr:port/database?name=db_name"
    async with asyncpg.create_pool(dsn=cs) as pool:
        print("pool created")

if __name__ == '__main__':
    loop = asyncio.get_event_loop()
    loop.run_until_complete(test())
    loop.close()
</code></pre>
<p>more details: <a href="https://docs.python.org/3/library/asyncio-task.html#example-chain-coroutines" rel="nofollow noreferrer">example-chain-coroutines</a></p>
</div>
<span class="comment-copy">Can you try without <code>async with</code> ?</span>
<span class="comment-copy">Seems to be working, but am I not missing out on the async part this way?</span>
<span class="comment-copy">Thank you! It also looks like I need to fix my connection string.</span>
<span class="comment-copy">glad to help you)</span>
